--- a/GhostMute/src/plugin.yml
+++ b/GhostMute/src/plugin.yml
@@ -1,12 +1,18 @@
 name: GhostMute
 main: com.djrapitops.ghostmute.GhostMute
-version: 1.0.0
+version: 1.1.0
 
 commands:
   ghostreload:
     usage: /ghostreload
-    description: Reloads config 
+    description: Reloads config
+  gmute:
+    usage: /gmute <player>
+    description: Mutes/unmutes the player.
 permissions:
+  GhostMute.mute:
+    description: Mute/unmute players
+    default: op
   GhostMute.bypass:
     description: Bypasses fake message being shown
     default: false
